deploy/remoteapi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remoteapi
  labels:
    app: remoteapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remoteapi
  template:
    metadata:
      labels:
        app: remoteapi
      # annotations:
      #   prometheus.io/scrape: "true"
      #   prometheus.io/port: "80"
    spec:
      volumes:
        - name: remoteapi-storage
          persistentVolumeClaim:
            claimName: remoteapi-claim
      containers:
      - name: remoteapi
        image: registry:5000/remoteapi:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        resources:
          requests:
            memory: "128Mi"
            cpu: "16m"
          limits:
            memory: "256Mi"
            cpu: "512m"
        volumeMounts:
          - mountPath: "/data"
            name: remoteapi-storage
---
