deploy/remoteapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remoteapi
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "remoteapi.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: remoteapi
            port:
              number: 80
  - host: "remoteapi"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: remoteapi
            port:
              number: 80
